# NGSAT

./: .env.example  .gitignore  .pre-commit-config.yaml  .reviewdog.yml  README.md  _check_rank.py  _check_rank2.py  _check_rank3.py  _check_rank4.py  _check_rank5.py  _check_rank6.py  _check_raw.py  _check_screener.py  _test_retrain.py  main.py  main.py.bak  package-lock.json  pyproject.toml
.github/workflows/: reviewdog.yml
.hermes/reports/: code_review_full_2026-06-29.md
backtest/: __init__.py  data_loader.py  engine.py  report.py
config/: presets.json
core/: backtest_runner.py  config.py  config_service.py  exceptions.py  logger.py  models.py  types.py
dashboard/backend/: __init__.py  api.py
dashboard/frontend/: _test_esbuild.cjs  check_syntax.cjs  find_brace.cjs  index.html  package-lock.json  package.json  tailwind.config.js
data/: db.py  minute_bar_builder.py  real_data_provider.py  repository.py  universe_manager.py
data/adapters/: base.py
docs/: 00-기획서.md  01-기술스택선정.md  02-패키지구조설계.md  03-KIS_API_연동테스트결과.md  04-하이브리드매매-설계.md  05-ML고도화-기획서.md  06-레짐모드-고도화-기획서.md  07-코드리뷰-실행계획서.md  08-스크리너-설정주입-수정계획서.md  09-전체코드리뷰-실행계획서.md  10-reviewdog-수정계획서.md  10-리스크진단-수정보고서.md  11-종합리스크-실행계획서.md  12-PhaseB-실행계획서.md  13-KIS-HTTPStatusError-수정계획.md  13-PhaseC-실행계획서.md  14-ML-모델-개선계획.md  14-잔여항목-사전분석.md  15-ML-학습기간-설정-기획서.md  15-피드백시스템-기획서.md  16-2차종합리뷰-실행계획서.md  16-과거-구간-학습-기획서.md  17-ML-모델-자동-선택-기획서.md  17-esbuild-빌드오류-분석보고서.md  18-esbuild-해결책-검토보고서.md  19-백테스트-대시보드-리스크검토.md  20-백테스트-대시보드-기획.md  21-esbuild해결후-실행계획.md  22-esbuild해결후-리스크검토.md  23-백테스트-대시보드-기획서.md  24-전체코드리뷰-개선실행계획서.md  25-be15-trainer-분할-계획서.md  26-백테스트-오류-수정-계획서.md  27-리스크검토-매매-정책-정합성.md  27-매매-정책-정합성-개선-계획서.md  28-리스크검토-레짐평가-장시간.md  28-버그-레짐평가-장시간-무관.md  29-코드리뷰-수정계획서.md  30-ratelimit-잔여버그-해결계획서.md  31-텔레그램-알림-확장-기획서.md  (+77 more)
live/: controller.py  entry_planner.py  executor.py  exit_manager.py  models.py  orchestrator.py  position_sizer.py  risk.py  session_tracker.py  trade_recorder.py
messaging/: .telegram_offset  bot.py  notifier.py
ml/: inference.py
ml/features/: builder.py  minute_builder.py
ml/training/: model_selection.py  persistence.py  trainer.py
scripts/: backfill_daily_data.py  collect_minute_data.py  demo_server.py  hybrid_backtest_check.py  ml_compare_models.py  ngsat_start.sh  restart_server.sh  retrain_minute_model.py  send_daily_report.py
strategy/: combined_scorer.py  entry_timing.py  exit_timing.py  indicators.py  minute_screener.py  mode_selector.py  patterns.py  preset_router.py  regime.py  scorer.py  screener.py  sector_weights.py
telegram/: bot.py  notifier.py
tests/: test_integration.py
tests/test_backtest/: test_data_loader.py  test_engine.py  test_report.py
tests/test_core/: test_types.py
tests/test_data/: test_kis_adapter.py  test_kis_endpoints.py  test_kis_mapper.py  test_kis_token.py
tests/test_live/: test_controller.py  (+8 more)
(+42 files in other folders)
