[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ngsat"
version = "0.1.0"
description = "New Generation Stock Auto Trader"
requires-python = ">=3.11"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",   # whitespace before ':' (Black compat)
    "W503",   # line break before binary operator (Black compat)
]
exclude = [
    ".venv",
    "node_modules",
    "__pycache__",
    "dashboard/frontend",
]

[tool.pylint]
max-line-length = 88
disable = [
    "C0114",  # missing module docstring
    "C0115",  # missing class docstring
    "C0116",  # missing function docstring
    "R0903",  # too few public methods
    "R0913",  # too many arguments
    "W0511",  # TODO/FIXME warnings
]
jobs = 0

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "W503"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["live", "strategy", "data", "ml", "backtest", "core"]
omit = [".venv/*", "tests/*", "dashboard/frontend/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
